<resources>
    <string name="app_name">Quizster</string>
    <string name="reset">Reset</string>
    <string name="submit">submit</string>
    <string name="next">next</string>

    <string name="question_1_title">question 1</string>
    <string name="question_1">What is Pending Intent in android?</string>
    <string name="answer_1a">It is a kind of an intent</string>
    <string name="answer_1b">It is used to pass the data between activities</string>
    <string name="none_of_the_above">None of the Above</string>
    <string name="answer_1c">It will fire at a future point of time.</string>
    <string name="question_2_title">question 2</string>
    <string name="question_2">What is the life cycle of services in android?</string>
    <string name="answer_2a"><![CDATA[onCreate()−>onStartCommand()−>onDestory()]]></string>
    <string name="answer_2b">onRecieve()</string>
    <string name="answer_2c">final()</string>
    <string name="answer_2d">Service life cycle is same as activity life cycle.</string>
    <string name="question_3_title">question 3</string>
    <string name="question_3">What are the functionalities in asyncTask in android?</string>
    <string name="answer_3a">onPreExecution()</string>
    <string name="answer_3b">doInBackground()</string>
    <string name="answer_3c">onProgressUpdate()</string>
    <string name="answer_3d">onPostExecution()</string>
    <string name="question_4_title">question 4</string>
    <string name="question_4">What are the two parts of a value of type double?</string>
    <string name="answer_4a">Significant digits</string>
    <string name="answer_4b">Length</string>
    <string name="answer_4c">Exponent</string>
    <string name="answer_4d">Mode</string>
    <string name="question_5_title">question 5</string>
    <string name="question_5">What is an anonymous class in android?</string>
    <string name="answer_5a">Interface class</string>
    <string name="answer_5b">A class that does not have a name but have functionalities in it</string>
    <string name="answer_5c">Java class</string>
    <string name="answer_5d">Manifest file</string>
    <string name="question_6_title">question 6</string>
    <string name="question_6">What is ADB in android?</string>
    <string name="answer_6a">Image tool</string>
    <string name="answer_6b">Development tool</string>
    <string name="answer_6c">Android Debug Bridge</string>
    <string name="question_7_title">question 7</string>
    <string name="question_7">What is JSON in android?</string>
    <string name="answer_7a">Java Script Object Native</string>
    <string name="answer_7b">Java Script Oriented Notation</string>
    <string name="answer_7c">Java Script Object Notation</string>
    <string name="question_8_title">question 8</string>
    <string name="question_8">What is the HTTP response error code status in android?</string>
    <string name="answer_8a"><![CDATA[status code < 100]]></string>
    <string name="answer_8b"><![CDATA[status code > 100]]></string>
    <string name="answer_8c"><![CDATA[status >= 400]]></string>
    <string name="question_9_title">question 9</string>
    <string name="question_9">What is ANR responding time in android?</string>
    <string name="answer_9a">10 sec</string>
    <string name="answer_9b">5 sec</string>
    <string name="answer_9c">1 min</string>
    <string name="question_10_title">question 10</string>
    <string name="question_10">What are the main components in android?</string>
    <string name="answer_10a">Activity</string>
    <string name="answer_10b">Services</string>
    <string name="answer_10c">Broadcast Receiver</string>
    <string name="answer_10d">Content provider</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="answer_1_c">Correct Answer 1: C</string>
    <string name="answer_3_d">Correct Answer 3: D</string>
    <string name="answer_8_c">Correct Answer 8: C</string>
    <string name="answer_9_b">Correct Answer 9: B</string>
    <string name="answer_10_all">Correct Answer 10: A,B,C &amp; D </string>

    <string name="explanation">Explanation:</string>
    <string name="explanation_1">Pending Intent is fired or triggered at a future point of time.</string>
    <string name="explanation_2">AsyncTask needs doInBackground() and remaining methods are optional. As a developer we should need to implement all methods which are given above.</string>
    <string name="explanation_3">HTTP status code >= 400 means error else success. Status code 404 means page not found</string>
    <string name="explanation_4">It\'s 5 seconds before getting an ANR (Application Not Responding</string>
    <string name="explanation_5">The main components in android are Activity, services, Broadcast Receiver and content providers.</string>
    <string name="go_back">Go back</string>
    <string name="show_explanation">Show Explanation</string>

    <string name="answer_2_a">Correct Answer 2: A</string>
    <string name="answer_4_a_c">Correct Answer 4: A,C</string>
    <string name="answer_7_c">Correct Answer 7: C</string>
    <string name="answer_6_c">Correct Answer 6: C</string>
    <string name="answer_5_b">Correct Answer 5: B</string>
</resources>
